package NYT.NYson.NProto;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions
{
    optional string field_name = 3000;
    optional bool yson_string = 3001;
}

extend google.protobuf.EnumValueOptions
{
    optional string enum_value_name = 3001;
}
